Fix uploading image posts problem and reserve line breaks in textual posts and textual section of post

--- a/styles/create-post-style.css
+++ b/styles/create-post-style.css
@@ -6,7 +6,6 @@
 }
 
 #create-post-textual-content {
-    white-space: pre-line;
     white-space: pre-wrap;
 }
 
